SERVER-9738 mongos should set the CursorNotFound bit when the cursor is not found